--- a/public/support.html
+++ b/public/support.html
@@ -315,34 +315,47 @@
                     </details>
                 </div>
 
-                <div class="faq-category">
-                    <h3>Equipment & Hardware</h3>
-                    <details class="faq-item">
-                        <summary>Do I need to rent a modem/router from you, or can I use my own?</summary>
-                        <div class="faq-content">
-                            <p>We provide the equipment without a monthly rental fee. The hardware remains the property of Community Fiber and will be collected if you ever disconnect service.</p>
-                        </div>
-                    </details>
-                    <details class="faq-item">
-                        <summary>Is the Wi-Fi equipment included in the monthly price?</summary>
-                        <div class="faq-content">
-                            <p>The Wi-Fi equipment is a one-time fee included on your first bill.</p>
-                        </div>
-                    </details>
-                    <details class="faq-item">
-                        <summary>Will your router cover my whole house, or do I need extenders?</summary>
-                        <div class="faq-content">
-                            <p>Coverage depends on the size and construction of your home. Our installation team will evaluate your layout during their visit to ensure you have the coverage you need.</p>
-                        </div>
-                    </details>
-                    <details class="faq-item">
-                        <summary>What happens to the equipment if I move or cancel service?</summary>
-                        <div class="faq-content">
-                            <p>All equipment should remain at the property if you move or cancel service.</p>
-                        </div>
-                    </details>
-                </div>
+              <div class="faq-category">
+    <h3>Equipment & Hardware</h3>
+    <details class="faq-item">
+        <summary>Do I need to rent a modem/router from you, or can I use my own?</summary>
+        <div class="faq-content">
+            <p>We provide the equipment without a monthly rental fee. The hardware remains the property of Community Fiber and will be collected if you ever disconnect service.</p>
+        </div>
+    </details>
+    <details class="faq-item">
+        <summary>Is the Wi-Fi equipment included in the monthly price?</summary>
+        <div class="faq-content">
+            <p>The Wi-Fi equipment is a one-time fee included on your first bill.</p>
+        </div>
+    </details>
+    <details class="faq-item">
+        <summary>Will your router cover my whole house, or do I need extenders?</summary>
+        <div class="faq-content">
+            <p>Coverage depends on the size and construction of your home. Our installation team will evaluate your layout during their visit to ensure you have the coverage you need.</p>
+        </div>
+    </details>
+    <details class="faq-item">
+        <summary>What happens to the equipment if I move or cancel service?</summary>
+        <div class="faq-content">
+            <p>All equipment should remain at the property if you move or cancel service.</p>
+        </div>
+    </details>
 
+    <details class="faq-item">
+        <summary>How do I manage my Wi-Fi network and settings?</summary>
+        <div class="faq-content">
+            <p>You can easily manage your network, set up parental controls, and see what devices are connected using the <strong>eero app</strong>.</p>
+            <p>
+                <a href="https://eero.com/app" target="_blank" style="color: #007bff; text-decoration: underline;">
+                    Download the eero app here
+                </a> 
+                or scan the QR code below to get started:
+            </p>
+            <img src="assets/images/eero_app_qr.png" alt="Scan to download eero app" style="max-width: 150px; margin-top: 10px; display: block;">
+        </div>
+    </details>
+</div>
                 <div class="faq-category">
                     <h3>Speed & Performance</h3>
                     <details class="faq-item">
