updated service section grid

--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,18 @@
     <!-- Other Services Section -->
     <section class="other-services-section fade-in-section">
         <div class="container">
-            <h2 class="section-title-small">Other Services</h2>
+            <h2 class="section-title-small">Explore Our Site</h2>
             <div class="services-grid">
+   
+                <!--Residential-->
+                <a href="residential.html" class="service-card">
+                    <div class="service-content">
+                        <h3>Residential Internet</h3>
+                        <p>Fast, reliable fiber internet for your home. No contracts, no data caps.</p>
+                        <span class="service-link">Learn More <i class="fa-solid fa-arrow-right-long"></i></span>
+                    </div>
+                </a>
+
                 
                 <!-- Business -->
                 <a href="business.html" class="service-card">
@@ -100,6 +110,24 @@
                         <h3>Support Center</h3>
                         <p>Have a question or issue? Visit our help center to submit a ticket or find answers.</p>
                         <span class="service-link">Get Help <i class="fa-solid fa-arrow-right-long"></i></span>
+                    </div>
+                </a>
+
+                <!-- About Us -->
+                <a href="about.html" class="service-card">
+                    <div class="service-content">
+                        <h3>About Us</h3>
+                        <p>Learn about our history, our mission, and the local team dedicated to serving you.</p>
+                        <span class="service-link">Meet the Team <i class="fa-solid fa-arrow-right-long"></i></span>
+                    </div>
+                </a>
+
+                <!-- News -->
+                <a href="blog.html" class="service-card">
+                    <div class="service-content">
+                        <h3>News & Updates</h3>
+                        <p>Stay informed about our network expansion, community events, and latest announcements.</p>
+                        <span class="service-link">Read More <i class="fa-solid fa-arrow-right-long"></i></span>
                     </div>
                 </a>
 
