--- a/public/builders.html
+++ b/public/builders.html
@@ -42,7 +42,7 @@
     <main class="main-content">
         
         <!-- Builder Partners Ribbon -->
-        <section class="builder-partners fade-in-section">
+        <section id="builder-partners" class="builder-partners fade-in-section">
             <div class="container" style="text-align:center; margin-bottom: 2rem;">
                 <h2 class="section-title" style="margin-bottom:0.5rem; font-size: 1.5rem; color: var(--npt-black);">Who we've worked with</h2>
             </div>
@@ -86,7 +86,7 @@
 
         <div class="container">
             <!-- Benefits Grid -->
-         <section class="benefits-section fade-in-section">
+         <section id="development-benefits" class="benefits-section fade-in-section">
     <div class="benefits-grid">
         
         <div class="benefit-card" data-step="01">
@@ -126,7 +126,7 @@
 </section>
 
             <!-- Partnership Form -->
-            <section class="inquiry-section fade-in-section">
+            <section id="builder-inquiry" class="inquiry-section fade-in-section">
                 <div class="form-wrapper">
                     <div class="form-intro">
                         <h2>Partner With Us</h2>
