--- a/public/business.html
+++ b/public/business.html
@@ -32,7 +32,7 @@
     <div id="master-header"></div>
 
     <!-- Hero Header -->
-    <header class="business-hero">
+    <header id="enterprise-fiber" class="business-hero">
         <div class="container hero-content">
             <h1>Enterprise-Grade Fiber</h1>
             <p>Custom builds and dedicated bandwidth for businesses that demand reliability.</p>
@@ -41,7 +41,7 @@
 
     <main class="main-content">
         <!-- Trusted Partners Ribbon -->
-        <section class="trusted-partners fade-in-section">
+        <section id="trusted-partners" class="trusted-partners fade-in-section">
             <div class="container" style="text-align:center; margin-bottom: 2rem;">
                 <h2 class="section-title" style="margin-bottom:0.5rem; font-size: 1.8rem; color: var(--npt-black);">Trusted by Local Businesses</h2>
                 <p style="color:#64748b;">Powering the connectivity of our community's best enterprises.</p>
@@ -79,7 +79,7 @@
         <div class="container">
             
             <!-- Map Section -->
-            <section class="map-section fade-in-section">
+            <section id="service-territory" class="map-section fade-in-section">
                 <div class="section-header">
                     <h2>Service Territory Map</h2>
                     <p>Use the map below to see if your business is located near our fiber infrastructure.</p>
@@ -129,7 +129,7 @@
             </section>
 
             <!-- Inquiry Form Section -->
-            <section class="inquiry-section fade-in-section">
+            <section id="business-quote" class="inquiry-section fade-in-section">
                 <div class="form-wrapper">
                     <div class="form-intro">
                         <h2>Request a Custom Quote</h2>
