--- a/public/residential.html
+++ b/public/residential.html
@@ -41,7 +41,7 @@
         </div>
 
         <!-- Pricing Grid Section -->
-        <section class="pricing-container">
+        <section id="plans-pricing" class="pricing-container">
             <!-- Loading State -->
             <div id="loading-indicator" class="loading-spinner">
                 <div class="spinner"></div>
@@ -60,7 +60,7 @@
         </section>
 
         <!-- Install Process Timeline (New Section) -->
-        <section class="timeline-section fade-in-section">
+        <section id="installation-process" class="timeline-section fade-in-section">
             <div class="container">
                 <h2 class="section-title">The Installation Process</h2>
                 <div class="timeline-container">
@@ -92,9 +92,21 @@
                 </div>
             </div>
         </section>
-
+        <!-- FAQ Quick Link -->
+        <section class="faq-cta-section fade-in-section">
+            <div class="container faq-cta-card">
+                <div class="faq-cta-copy">
+                    <h2>Questions Before You Choose?</h2>
+                    <p>Read our full FAQ for installation, billing, equipment, and support details.</p>
+                </div>
+                <a href="support.html#support-faq" class="faq-cta-button">
+                    <i class="fa-solid fa-circle-question" aria-hidden="true"></i>
+                    Visit FAQs
+                </a>
+            </div>
+        </section>
         <!-- Testimonials Section -->
-        <section class="testimonials-section fade-in-section" style="padding: 60px 20px; background-color: #f8fafc;">
+        <section id="customer-reviews" class="testimonials-section fade-in-section" style="padding: 60px 20px; background-color: #f8fafc;">
             <div class="container">
                 <h2 class="section-title">What Our Neighbors Say</h2>
                 <div id="testimonials-grid" class="testimonials-grid">
@@ -104,7 +116,7 @@
         </section>
 
         <!-- Neighborhood Highlights (Moved from Index) -->
-        <section class="neighborhoods-section" style="padding-top: 4rem;">
+        <section id="neighborhood-highlights" class="neighborhoods-section" style="padding-top: 4rem;">
             <div class="container">
                 <h2 class="section-title fade-in-section">Neighborhood Highlights</h2>
                 <p class="section-desc fade-in-section" style="text-align:center; max-width: 600px; margin: 0 auto 3rem; color: #64748b;">
