--- a/public/support.html
+++ b/public/support.html
@@ -41,7 +41,7 @@
 
     <main class="main-content">
         <div class="container">
-            <section class="support-contact-section fade-in-section">
+            <section id="support-contact" class="support-contact-section fade-in-section">
                 <div class="support-grid">
                     <!-- Left Column: Contact Info -->
                     <div class="contact-info-card">
@@ -175,7 +175,7 @@
             </div>
             
             <!-- Comparison Table Section -->
-            <section class="comparison-section fade-in-section">
+            <section id="fiber-comparison" class="comparison-section fade-in-section">
                 <h2>Why Move to Fiber?</h2>
                 <div class="table-wrapper">
                     <table class="comparison-table">
@@ -238,7 +238,7 @@
             </section>
 
             <!-- FAQ Section -->
-            <section class="faq-section fade-in-section">
+            <section id="support-faq" class="faq-section fade-in-section">
                 <h2>Frequently Asked Questions</h2>
 
                 <div class="faq-category">
